<resources>
    <string name="app_name">Terascan</string>
    <string name="recent_files">Recent Files</string>
    <string name="view_all"><u>View All</u></string>
    <string name="home">Home</string>
    <string name="docs">Docs</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_first_document">Add your first document</string>
    <string name="pro">Pro</string>

    <string name="file_name">File Name</string>

    <string name="allow_storage_permission">Allow Storage Permission</string>
    <string name="access_your_files">To proceed with the previous action Terascan will need to access your files</string>
    <string name="do_not_allow">Don\'t Allow</string>
    <string name="allow">Allow</string>
    <string name="all_docs">All Docs</string>
    <string name="data_not_found">Data Not Found!</string>
    <string name="rename_file">Rename File</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="delete">Delete?</string>
    <string name="delete_desc">Once deleted, the doc cannot be recovered. Do you want to delete this file?</string>
    <string name="yes">Yes</string>
    <string name="move_to">Move To</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="create_name">Create Pin</string>
    <string name="pin_desc">One pin for all files. The pin is used within the app to lock and export file. Set pin in the shared and save screen.</string>
    <string name="set_security_questions">Set Security Questions</string>
    <string name="incorrect_pin">Incorrect Pin. Retry!</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="question_fav_color">What is your Favourite color?</string>
    <string name="question_pet_name">"What's your pet name?"</string>
    <string name="question_lucky_number">"What's your lucky number?"</string>
    <string name="answer">Answer</string>
    <string name="security_question_description">If you forgot the pin the security question will be used to verify identify so that you can reset the password</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_data">No Data!</string>
    <string name="create_new_pin">Create New Pin</string>
    <string name="enter_new_pin">Enter New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
</resources>