<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="296dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title_resetpin"
            android:layout_marginTop="24dp"
            android:textSize="14sp"
            android:text="@string/create_new_pin"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/title_color"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_pin"
            android:inputType="numberPassword"
            android:layout_marginTop="23dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_new_pin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_confirm_pin"
            android:inputType="numberPassword"
            android:layout_marginTop="23dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/confirm_new_pin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:id="@+id/tv_cancel_newpin"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/cancel"
                android:textColor="#5E5E5E"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay"
                android:textSize="12sp"
                android:id="@+id/tv_new_pin"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_title_color"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>